--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,8 @@
-<p>
-  home works!
-</p>
+<div class="main-content">
+    <div class="title">
+        SHORT.IE
+    </div>
+    <div class="url-shortener-container">
+        <app-url-shortener></app-url-shortener>
+    </div>
+</div>
