--- a/src/app/url-shortener/url-shortener.component.scss
+++ b/src/app/url-shortener/url-shortener.component.scss
@@ -15,7 +15,7 @@ app-url-shortener {
 		width: 80%;
 		font-size: 25px;
 		border: none;
-		padding: 0 10px;
+		padding: 0 20px;
 		
 		&:focus {
 			outline: none;
@@ -41,9 +41,10 @@ app-url-shortener {
 	
 	.result-container {
 		width: 100%;
+		max-height: 400px;
 		margin-top: 20px;
 		border-radius: 5px;
-		overflow: hidden;
+		overflow: scroll;
 		margin-bottom: 20px;
 		
 		
@@ -53,20 +54,31 @@ app-url-shortener {
 			height: 80px;
 			display: flex;
 			position: relative;
+			border-top:1px solid darken(map_get($colors, lightListBg), 65);
 			
+			&:first-of-type{
+				border: none;
+			}
 			
 			.result-url {
-				color: map_get($colors, lightListText);
-				font-size: 25px;
-				margin: auto 0;
-				padding-left: 20px;
+				height: 100%;
 				width: 100%;
 				min-width: 0;
+				margin: auto 0;
+				padding-left: 20px;
 				text-overflow: clip;
 				cursor: pointer;
+				display: flex;
 				
 				&:hover {
 					text-decoration: underline;
+				}
+				
+				span{
+					margin: auto 0;
+					color: map_get($colors, lightListText);
+					font-size: 25px;
+					text-decoration: inherit;
 				}
 			}
 			
@@ -97,7 +109,7 @@ app-url-shortener {
 						position: absolute;
 						left: 0;
 						width: calc(100% - 200px);
-						background: map_get($colors, secondary);
+						background: map_get($colors, lightListBg);
 					}
 				}
 			}
