better responsiveness for smaller screens better user experience, now also the original url is shown to the user

--- a/src/app/url-shortener/url-shortener.component.html
+++ b/src/app/url-shortener/url-shortener.component.html
@@ -8,16 +8,14 @@
 <div class="result-container">
     <div class="result" *ngFor="let result of results">
         <div class="result-url" (click)="goTo(result.originalUrl)">
-            <span>
+            <div class="short-url">
                 {{result.shortUrl}}
-            </span>
+            </div>
+            <div class="original-url">
+                {{result.originalUrl}}
+            </div>
         </div>
         <div class="result-option-container">
-            <button class="result-option go-to-url" (click)="goTo(result.originalUrl)">
-                <span>
-                    GO
-                </span>
-            </button>
             <button class="result-option" (click)="copyURL(result.shortUrl)">
                 <span>
                     COPY
