--- a/src/app/url-shortener/url-shortener.component.html
+++ b/src/app/url-shortener/url-shortener.component.html
@@ -5,9 +5,9 @@
         {{ isLoading ? 'SENDING...' : 'SHORTEN!'}}
     </button>
 </div>
-<div class="result-container">
+<div class="result-container" #resultContainer>
     <div class="result" *ngFor="let result of results"
-         [ngClass]="{'slide-out' : isDeleted[result.id]}">
+         [ngClass]="{'slide-out' : isDeleted[result.id], 'slide-in': result.shouldAnimate}">
         <div class="result-url" (click)="goTo(result.originalUrl)">
             <div class="short-url">
                 {{result.shortUrl}}
