added infoservice (info dialogs) restructured project for better scalability small graphic fixes

--- a/src/app/components/url-shortener/url-shortener.component.html
+++ b/src/app/components/url-shortener/url-shortener.component.html
@@ -1,6 +1,6 @@
 <div class="input-container">
     <input [(ngModel)]="url" type="url" class="url-input"/>
-    <button class="submit-button" (click)="shortenURL()"
+    <button class="submit-button" (click)="url.length > 0 ? shortenURL() : ''"
             [disabled]="isLoading">
         {{ isLoading ? 'SENDING...' : 'SHORTEN!'}}
     </button>
