--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,5 +4,6 @@ $colors: (
 	lightText: #FFFFFF,
 	darkText: #505050,
 	lightListBg: #FFFCFC,
-	lightListText: red
+	lightListText: red,
+	danger: #ff7d7d,
 )
